[gd_scene load_steps=10 format=3 uid="uid://dr7cgc0643w3o"]

[ext_resource type="Script" path="res://game/scenes/bee.gd" id="1_iqxjb"]
[ext_resource type="Texture2D" uid="uid://3p1ry810rlfd" path="res://game/assets/bees/sample/outline_body.png" id="1_s3gky"]
[ext_resource type="Texture2D" uid="uid://cg1tw1yheshty" path="res://game/assets/bees/sample/outline_head.png" id="2_de02u"]
[ext_resource type="Texture2D" uid="uid://qtibrlo1am4t" path="res://game/assets/bees/sample/color_1.png" id="4_akhes"]
[ext_resource type="Texture2D" uid="uid://bm781415jhj4x" path="res://game/assets/bees/sample/outline_wings.png" id="4_j6leu"]
[ext_resource type="Texture2D" uid="uid://cxvs3sehct8wf" path="res://game/assets/bees/sample/color_2.png" id="5_svufa"]
[ext_resource type="Texture2D" uid="uid://cp1qhimbdjptw" path="res://game/assets/bees/sample/wings.png" id="7_vqx4m"]
[ext_resource type="Texture2D" uid="uid://ctng0v682noi8" path="res://game/assets/bees/sample/legs.png" id="8_a2mja"]
[ext_resource type="Texture2D" uid="uid://dpfodsdt0vgkv" path="res://game/assets/bees/sample/crown.png" id="9_11ycf"]

[node name="Bee" type="CenterContainer"]
custom_minimum_size = Vector2(64, 64)
script = ExtResource("1_iqxjb")

[node name="BodyOutline" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_s3gky")

[node name="HeadOutline" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_de02u")

[node name="WingsOutline" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_j6leu")

[node name="Color1" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_akhes")

[node name="Color2" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_svufa")

[node name="Wings" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("7_vqx4m")

[node name="Legs" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("8_a2mja")

[node name="Crown" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("9_11ycf")
